# loom

./: .gitignore  AGENT_FIRST_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  HANDOVER.md  PLAN.md  README.md  SECURITY_REVIEW.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
.claude/skills/loom-commands/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  mobile-apk.yml
design-handover/: DESIGN_HANDOVER.md
docs/: AGENTIC-ENHANCEMENTS.md  ASSESSMENT.md  CROSS_PLATFORM_PARITY.md  FEATURES.md  IDEAS.md  ORCHESTRATION-IDEAS.md  PRE_WINDOWS_CHECKLIST.md  README.md  agent-hooks.md  agent-mcp.md  cli.md  frameless-redesign-plan.md  troubleshooting.md
docs/adr/: 0001-opaque-panes-no-agent-awareness.md  0002-ptys-live-in-app-process-no-detach.md  0003-output-transport-channel-first-websocket-fallback.md  0004-launch-via-login-interactive-shell.md  0005-ctrl-shift-shortcut-namespace.md  0006-canvas-renderer-not-webgl.md  0007-inter-pane-control-bus.md  0008-agents-first-class-via-self-report.md  0009-sqlite-session-task-log.md  0010-interactive-git.md  0011-heuristic-output-observer.md  0012-remote-fleet-control-dial-out-vps-relay.md
docs/design/: frameless-redesign-plan.md  lansec-review-brief.md  plan-02-mobile-wireframe.html
docs/design/design_handoff_loom_frameless/: Loom App.dc.html
docs/design_handoff_loom_frameless/: README.md
docs/design_handoff_termhaus_frameless/: README.md  Termhaus App.dc.html
docs/loom-brand/: Loom Brandmark Handoff.html
docs/reference/: agent-hooks.md  agent-mcp.md  cli.md  troubleshooting.md
docs/roadmap/: AGENTIC-ENHANCEMENTS.md  IDEAS.md  ORCHESTRATION-IDEAS.md  PRE_WINDOWS_CHECKLIST.md
docs/roadmap/plans/: 01-move-panes.md  02-mobile-remote.md  03-website-docs.md  04-new-workspace-form.md  README.md
loom-voce/: Cargo.toml  README.md
loom-voce/.cargo/: config.toml
loom-voce/examples/: transcribe_file.rs
loom-voce/src/: audio.rs  lib.rs  loom.rs  main.rs  stt.rs
mobile/: .gitignore  App.tsx  README.md  app.json  eas.json  index.ts  package-lock.json  package.json  tsconfig.json
mobile/src/: protocol.ts  theme.ts
mobile/src/lib/: lanClient.ts  notify.ts  verifyBridge.ts
mobile/src/screens/: FleetScreen.tsx  PairScreen.tsx  PaneScreen.tsx
mobile/src/state/: fleet.ts  pairing.ts
mobile/src/tasks/: fleetTask.ts
src/: App.css  App.tsx  audio.rs  index.tsx  main.rs  stt.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  claude.rs  cli.rs  control.rs  control_sock.rs  control_transport.rs  docs.rs  editor.rs  git.rs  lanbridge.rs  lansec.rs  lib.rs  logs.rs  main.rs  mcp.rs  pty.rs  sessionlog.rs  tray.rs  voce.rs  winproc.rs  workspace.rs
src/components/: BoardPanel.tsx  BroadcastBar.tsx  ClearanceDock.tsx  CommandPalette.tsx  DetachedPane.tsx  DocsPanel.tsx  EmptyWorkspace.tsx  FleetApprovals.tsx  FleetPanel.tsx  GitPanel.tsx  HistorySearch.tsx  LayoutNode.tsx  ListeningOverlay.tsx  MarkdownEditor.tsx  NewWorkspaceLauncher.tsx  NewWorkspaceWizard.tsx  PreviewPanel.tsx  RemoteSettings.tsx  ReopenPanel.tsx  SessionLogViewer.tsx  Settings.tsx  ShortcutsOverlay.tsx  Terminal.tsx  TitleBar.tsx  WorkspaceRail.tsx
src/ipc/: protocol.ts
src/lib/: agentAvailability.ts  agents.test.ts  agents.ts  ansi.test.ts  ansi.ts  askRegistry.test.ts  askRegistry.ts  auditClient.ts  capture.ts  claudeSessions.ts  claudeUsage.test.ts  claudeUsage.ts  clipboard.ts  detach.ts  docsClient.ts  editor.ts  gitClient.test.ts  gitClient.ts  globalHotkey.ts  grid.test.ts  grid.ts  guardrails.test.ts  guardrails.ts  idle.test.ts  idle.ts  keybindings.test.ts  keybindings.ts  lanBridge.ts  layout.test.ts  layout.ts  logsClient.test.ts  logsClient.ts  markdown.test.ts  markdown.ts  matching.test.ts  matching.ts  notify.ts  outputObserver.test.ts  outputObserver.ts  paneControl.test.ts  (+15 more)
src/stores/: activity.test.ts  activity.ts  audit.test.ts  audit.ts  blackboard.test.ts  blackboard.ts  board.test.ts  board.ts  claims.test.ts  claims.ts  clearances.test.ts  clearances.ts  heuristics.ts  inputHolds.test.ts  inputHolds.ts  openAsks.test.ts  openAsks.ts  remoteTrust.test.ts  remoteTrust.ts  sessions.test.ts  sessions.ts  settings.ts  theme.ts  workspace.test.ts  workspace.ts
