[package]
name = "loom-voce"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text dictation into Loom terminal panes, over the loom control bus (ADR-0007)."
license = "MIT"

[[bin]]
name = "loom-voce"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Audio capture — pure Rust, no sudo.
cpal = "0.15"

# Speech-to-text — vendors whisper.cpp; builds in-tree via bundled cmake (no sudo).
# The `whisper` feature set / model download is handled at runtime (see src/stt.rs).
whisper-rs = "0.12"

# Voice-activity detection to auto-end an utterance (Silero ONNX under the hood).
voice_activity_detector = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
