[package]
name = "loom-voce"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text dictation into Loom terminal panes, over the loom control bus (ADR-0007)."
license = "MIT"

[[bin]]
name = "loom-voce"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Audio capture is done by shelling out to the system recorder (parecord/arecord) — no build-time
# ALSA `-dev` headers, no sudo. See src/audio.rs for why we avoid cpal here.

# Speech-to-text: the whisper.cpp binding (`whisper-rs = "0.12"`) is intentionally NOT taken yet.
# The engine in src/stt.rs is a stub with a wiring guide; adding the dep pulls in a cmake+C build
# of whisper.cpp. Uncomment when wiring transcription (install cmake no-sudo via `pip install cmake`):
# whisper-rs = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
