[package]
name = "loom-voce"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text dictation into Loom terminal panes, over the loom control bus (ADR-0007)."
license = "MIT"

[[bin]]
name = "loom-voce"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
whisper-rs = "0.14"

# Audio capture, split by platform (see src/audio.rs):
#  • Linux  — shell out to parecord/arecord: no build-time ALSA `-dev` headers, no sudo. That's why
#             cpal is target-gated OUT below, keeping the Linux build byte-identical and header-free.
#  • macOS/Windows — cpal (CoreAudio/WASAPI): builds cleanly with no problematic system headers, and
#             there's no parecord/arecord to shell out to. Only compiled on those targets.
[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
