[package]
name = "termhaus"
version = "0.8.0"
description = "A control room of live terminals — a GUI terminal multiplexer for driving fleets of CLI agents"
authors = ["Termhaus"]
edition = "2021"
# Two binaries now (the app + the `th` control CLI, ADR-0007); name the app as the default
# so `cargo run` / `tauri dev` stay unambiguous.
default-run = "termhaus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termhaus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# The inter-pane control CLI (ADR-0007), built beside the app binary so it lands on the
# child PATH we inject into each pane. std + serde_json only on Linux; on Windows it also
# pulls `windows-sys` (below) via the shared `control_transport` for the named-pipe bus.
[[bin]]
name = "th"
path = "src/bin/th.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2"

# Windows-only: the inter-pane control bus (M7.5) uses named pipes via raw Win32 FFI in
# `control_transport.rs`. Target-gated, so the Linux build pulls nothing new and stays
# byte-identical. Shared by the app lib and the `th` / `th-mcp` bins (via `#[path]`).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

