[package]
name = "loom"
version = "0.11.0"
description = "A control room of live terminals — a GUI terminal multiplexer for driving fleets of CLI agents"
authors = ["Loom"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# One binary now: `loom`. A bare `loom` (or `loom .` / `loom <dir>`) opens the GUI; a control-CLI
# subcommand (`loom list`/`send`/`spawn`/… , ADR-0007) or `loom mcp` (the MCP server) dispatches
# to the CLI/MCP face instead — see `main.rs`. The control CLI/MCP are std + serde_json only and
# live in the lib (`cli.rs`, `mcp.rs`), so they're built into the same binary the panes get on PATH.

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
# Durable Session/Task history (ADR-0009). `bundled` compiles SQLite from source → no system
# libsqlite dependency, so packaging stays self-contained. Only structured lifecycle rows land
# here (never PTY bytes), so it never touches the flood path.
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2"

# Windows-only: the inter-pane control bus (M7.5) uses named pipes via raw Win32 FFI in
# `control_transport.rs`. Target-gated, so the Linux build pulls nothing new and stays
# byte-identical. Used by the app lib's control relay and its `cli`/`mcp` faces alike.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

