[package]
name = "loom"
version = "1.8.0"
description = "A control room of live terminals — a GUI terminal multiplexer for driving fleets of CLI agents"
authors = ["Loom"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# One binary now: `loom`. A bare `loom` (or `loom .` / `loom <dir>`) opens the GUI; a control-CLI
# subcommand (`loom list`/`send`/`spawn`/… , ADR-0007) or `loom mcp` (the MCP server) dispatches
# to the CLI/MCP face instead — see `main.rs`. The control CLI/MCP are std + serde_json only and
# live in the lib (`cli.rs`, `mcp.rs`), so they're built into the same binary the panes get on PATH.

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
# Durable Session/Task history (ADR-0009). `bundled` compiles SQLite from source → no system
# libsqlite dependency, so packaging stays self-contained. Only structured lifecycle rows land
# here (never PTY bytes), so it never touches the flood path.
rusqlite = { version = "0.40", features = ["bundled"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2"
# Cross-platform process introspection (live cwd + argv for the pane title bar / Source Control
# scoping). Replaces the old Linux-only `/proc` reads with one path that resolves on Linux, macOS,
# and Windows. `default-features = false` + `system` keeps it to just the process/system component
# (no disk/network/components pulled in). Only queried on an explicit poll, never on the flood path.
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Windows-only: the inter-pane control bus (M7.5) uses named pipes via raw Win32 FFI in
# `control_transport.rs`. Target-gated, so the Linux build pulls nothing new and stays
# byte-identical. Used by the app lib's control relay and its `cli`/`mcp` faces alike.
# GTK clipboard (Linux). arboard (used by tauri-plugin-clipboard-manager) writes the X11 CLIPBOARD
# in a way that doesn't serve external apps reliably inside a WebKitGTK app, so copy→other-app comes
# back empty. GTK's own clipboard (what the webview stack uses) exports correctly. Version pinned to
# the one Tauri already resolves, so no new build cost.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

